# Adds recommended packages below
[package]
name = "utils"
version = "0.1.0"
authors = ["Myles Berueda <195809365+mylesberueda@users.noreply.github.com>"]
description = "Just a bunch of personal random utils"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
color-eyre = "0.6"
thiserror = "2.0"
ratatui = { version = "0.30" }
crossterm = { version = "0.29" }
regex = { version = "1.12" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]
